--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <div>git status-статус текущего локального репозитория</div>
     <div>git add path-to-file - добавить новый фаль под контроль гита</div>
     <div>git commit -am "added new file index.htlm"</div>
+    <div>git push-отправить на сервер</div>
+    <div>git pull -забрать с сервера/div>f
 </body>
 </html>
