--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div>git clone path-to-repository</div>
     <div>git status-статус текущего локального репозитория</div>
     <div>git add path-to-file - добавить новый фаль под контроль гита</div>
-    <div>git commit -am "added new file index.htlm"</div>
+    <div>git commit -am"" - зафиксировать изменения и дать им коментарий</div>
+    <div>git push-отправить все закомиченый изменение на репозиторий сервер</div>
+    <div>git pull -забрать свежие обновления</div>
 </body>
 </html>
